Fire burns now.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Isaac.js</title>
 </head>
 <body>
+    <a href="https://github.com/nicolasbrugneaux/isaac.js"
+       style="position:absolute; height:141px; width:141px; top:0; right:0;"
+       target="_blank">
+        <img src="build/img/fork_me.png" alt="Fork me">
+    </a>
     <canvas id="app" width="800" height="480">
         You need a proper browser meatbag.
     </canvas>
