Added a link to buy the game.
Got some feedback that my version of the game could make people think
I'm affiliated or a concurrent to the orinal devs. I am not and giving
back soem credit.

<3

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <canvas id="app" width="800" height="480">
         You need a proper browser meatbag.
     </canvas>
+    <br>
+    <p>This was made because the original game is amazing and I wanted to give them back all the honor, I don't own any pictures and/or want to gain any benefit from that, <a href="http://store.steampowered.com/app/250900/">buy the original awesome game on steam</a>. &lt;3</p>
     <script src="build/js/bundle.js"></script>
     <script src="build/vendor/stats.js/build/stats.min.js"></script>
     <script>
